Update solution to LeetCode 22 (#65)